First stab at hacky back-end

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 <body>
 
 <h2>Transaction Mapper</h2>
+
+<ul> 
+  <li><a href="https://lackofapplicationltd.mybalsamiq.com/projects/transactionmapping/edit">Balsamiq</a>
+  <li><a href="http://jsfiddle.net/8ypxW/3/?">Save DIV as PNG</a>
+  <li><a href="http://goo.gl/WUL9F">Print DIV</a>
+  <li><a href="http://goo.gl/AvCcj">Scrollable table (not sure about click action)</a>
+  <li><a href="http://goo.gl/wglghY">DOT language playground (see 'view source')</a>
+</ul>
  
 <div id="tabs">
 
