New version of layout

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
   <title>Transaction Mapper</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/smoothness/jquery-ui.css" />
 
   <script>
+
     $(function() {
-      $("#tabs").tabs();
+// START UP HERE
     });
+
   </script>
 
 </head>
@@ -18,35 +18,30 @@
 <body>
 
 <h2>Transaction Mapper</h2>
+All changes saved automatically (no access controls, no versioning).<br/>
+Send questions to <a href="mailto:david.durant@digital.cabinet-office.gov.uk">David Durant</a>.
+<hr/>
 
-<ul> 
-  <li><a href="https://lackofapplicationltd.mybalsamiq.com/projects/transactionmapping/edit">Balsamiq</a>
-  <li><a href="http://jsfiddle.net/8ypxW/3/?">Save DIV as PNG</a>
-  <li><a href="http://goo.gl/WUL9F">Print DIV</a>
-  <li><a href="http://goo.gl/AvCcj">Scrollable table (not sure about click action)</a>
-  <li><a href="http://goo.gl/wglghY">DOT language playground (see 'view source')</a>
-</ul>
+Transaction CRUD / Steps CRUD / Actions CRUD<br/>
+<a href="http://goo.gl/AvCcj">Scrollable table (not sure about click action)</a>
  
-<div id="tabs">
-
-  <ul>
-    <li><a href="#tabs-1">Transactions</a></li>
-    <li><a href="#tabs-2">Journeys</a></li>
-  </ul>
-
-  <div id="tabs-1">
-    <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
-  </div>
-
-  <div id="tabs-2">
-    <p>
-      <img src="http://i.telegraph.co.uk/multimedia/archive/01515/starbirth_1515384c.jpg">
-      &nbsp;
-      <img src="http://fc02.deviantart.net/fs70/f/2011/328/c/9/profile_picture_by_colorful_galaxy-d4h6irf.jpg">
-    </p>
-  </div>
-</div>
+<hr/>
  
+Journey CRUD including steps to be mapped!
+
+<hr/>
+
+Download Button(?) | Print Button(?)<br/>
+<a href="http://jsfiddle.net/8ypxW/3/?">Save DIV as PNG</a><br/>
+<a href="http://goo.gl/WUL9F">Print DIV</a>
+
+ 
+<hr/>
+
+<div><h3>Transaction:</h3></div>
+<div><h3>User journey</h3></div>
+Map!<br/>
+<a href="http://goo.gl/wglghY">DOT language playground (see 'view source')</a>
  
 </body>
 </html>
