Part of initial conditions done

--- a/index.html
+++ b/index.html
@@ -19,114 +19,12 @@
   <script type="text/javascript" src="js/jquery.printElement.js"></script>
   <script type="text/javascript" src="js/jquery.browser.js"></script>
   <script type="text/javascript" src="js/base64.js"></script>
-  
+
+  <!-- My JavaScript -->
+  <script type="text/javascript" src="js/my.js"></script>
+
   <!-- My CSS -->
   <link href="css/my.css" rel="stylesheet" type="text/css" />
-
-  <script>
-
-    // Global variables
-    var gNetwork;
-
-    // TEST DATA FOR NOW!
-    var gData = {
-          dot: "digraph {\
-            node [shape=circle fontSize=16]\
-            edge [length=100, color=gray, fontColor=black]\
-            A -> B;\
-            B -> C;\
-            C -> A;\
-          }"
-        };
-    var gCanvas;
-    var gOptions = { height:"400px" };
-    var gPrinting = false;
-    var gShowControls = true;
-
-    // Resize the map when window resizes
-    window.onresize = function () {
-      gNetwork.redraw()
-    };
-
-    // Draw the map
-    function draw () {
-      try {
-        // create a network
-        gCanvas = $("#map")[0];
-        gNetwork = new vis.Network(gCanvas, gData, gOptions);
-        gNetwork.redraw();
-      }
-      catch (err) {
-        console.log(err.toString());
-      }
-    }
-
-    // Faking it for now!
-    function getNetworkData() {
-      return("A -> B;B -> C;C -> A;");
-    }
-
-    $(function() {
-
-      // Show controls
-      $("#toggle_controls_button").click(function() {
-        if (gShowControls == true) {
-          gShowControls = false;
-          $("#crud_wrapper").hide();
-        } else {
-          gShowControls = true;
-          $("#crud_wrapper").show();
-        }
-      });
-
-      // Download PNG of network
-      $("#download_button").click(function() {
-        html2canvas($("#map_area"), {
-          onrendered: function(canvas) {
-            Canvas2Image.saveAsPNG(canvas); 
-          }
-        });
-      });
-
-      // Print network
-      $("#print_button").click(function() {
-        html2canvas($("#map_area"), {
-          onrendered: function(canvas) {
-            gPrinting = true;
-            var image = Canvas2Image.saveAsPNG(canvas, true); 
-            $("#print_area").html(image);
-            $("#print_area").printElement();
-          }
-        });
-      });
-
-      // Focus event used to catch print window closing - puts things back as they were before printing
-      $(window).focus(function() {
-        if (gPrinting) {
-          $("#print_area").html("");
-          gPrinting = false;
-        }
-      });
-
-      // Handle change in canvas height
-      $("#canvas_height_slider").change(function() {
-        var newHeight = $("#canvas_height_slider").val() + "px";
-        gOptions.height = newHeight;
-        draw();
-      });
-      
-      // Handle change in line length
-      $("#line_length_slider").change(function() {
-        gData.dot = "digraph {node [shape=circle fontSize=16] edge [length=" + $("#line_length_slider").val() + ", color=gray, fontColor=black]" + getNetworkData() + "}";
-        draw();
-      });
-
-      // Initial drawing
-      draw();
-
-    });
-
-  </script>
 
 </head>
 
@@ -146,73 +44,59 @@
 
   <div id="crud_wrapper">
 
-  <div id="transaction_area">
-    <b>Transactions</b>
-    <select name="transaction_select" size="8" style="width:95%;" multiple>
-      <option value="new">-> New <-</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-    </select><p/>
-    <input id="transaction_input" style="width:55%;"></input>
-    <button id="transaction_button">Add</button>
-    <button id="transaction_delete_button">Delete</button>
-  </div>
+    <div id="transaction_area">
+      <b>Transactions</b>
+      <select id="transaction_select" size="8" style="width:95%;" multiple>
+        <option id="new" value="new">-> New <-</option>
+      </select><p/>
+      <input id="transaction_input" style="width:55%;"></input>
+      <button id="transaction_button">Add</button>
+      <button id="transaction_delete_button">Delete</button>
+    </div>
   
-  <div id="steps_area">
-    <b>Steps for transaction</b>
-    <select name="steps_select" size="8" style="width:95%;" multiple>
-      <option value="new">-> New <-</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-    </select><p/>
-    <input id="steps_input" style="width:55%;"></input>
-    <button id="steps_button">Add</button>
-    <button id="steps_delete_button">Delete</button>
-  </div>
+    <div id="steps_area">
+      <b>Steps for transaction</b>
+      <select name="steps_select" size="8" style="width:95%;" multiple>
+        <option value="new">-> New <-</option>
+      </select><p/>
+      <input id="steps_input" style="width:55%;"></input>
+      <button id="steps_button">Add</button>
+      <button id="steps_delete_button">Delete</button>
+    </div>
   
-  <div id="actions_area">
-    <b>Actions for transaction</b>
-    <select name="actions_select" size="5" style="width:95%;" multiple>
-      <option value="new">-> New <-</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-    </select><p/>
-    <select name="actions_thing_one_select" style="width:45%;">
-      <option value="new">Stuff</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-    </select>
-    &nbsp;
-    <select name="actions_thing_two_select" style="width:45%;">
-      <option value="new">Stuff</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-    </select><p/>
-    <input id="actions_input" style="width:55%;"></input>
-    <button id="actions_button">Add</button>
-    <button id="actions_delete_button">Delete</button>
-  </div>
+    <div id="actions_area">
+      <b>Actions for transaction</b>
+      <select name="actions_select" size="5" style="width:95%;" multiple>
+        <option value="new">-> New <-</option>
+      </select><p/>
+      <select name="actions_thing_one_select" style="width:45%;">
+        <option value="new">Stuff</option>
+      </select>
+      &nbsp;
+      <select name="actions_thing_two_select" style="width:45%;">
+        <option value="new">Stuff</option>
+      </select><p/>
+      <input id="actions_input" style="width:55%;"></input>
+      <button id="actions_button">Add</button>
+      <button id="actions_delete_button">Delete</button>
+    </div>
   
-  <div id="journey_area">
-    <b>Journeys for transaction</b>
-    <select name="journey_select" size="8" style="width:95%;" multiple>
-      <option value="new">-> New <-</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-    </select><p/>
-    <input id="journey_input" style="width:55%;"></input>
-    <button id="journey_button">Add</button>
-    <button id="jounrey_delete_button">Delete</button>
-  </div>
+    <div id="journeys_area">
+      <b>Journeys for transaction</b>
+      <select name="journeys_select" size="8" style="width:95%;" multiple>
+        <option value="new">-> New <-</option>
+      </select><p/>
+      <input id="journeys_input" style="width:55%;"></input>
+      <button id="journeys_button">Add</button>
+      <button id="jounreys_delete_button">Delete</button>
+    </div>
   
-  <div id="actions_selected_area">
-    <b>Actions to show</b>
-    <select name="actions_show_select" size="8" style="width:95%;" multiple>
-      <option value="new">-> New <-</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-    </select><p/>
-  </div>
+    <div id="actions_selected_area">
+      <b>Actions to show</b>
+      <select name="actions_show_select" size="8" style="width:95%;" multiple>
+        <option value="new">-> New <-</option>
+      </select><p/>
+    </div>
   </div>
 
   <hr/>
