--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
   <!-- Delete confirmation modal dialogue -->
-  <div id="dialog_confirm" title="Some title" hidden></div>
+  <div id="dialog_confirm" title="Confirm" hidden></div>
 
   <h2>Transaction Mapper</h2>
   All changes saved automatically (no access controls, no versioning). <a href="">This is a video on how it works</a>. 
@@ -56,7 +56,7 @@
       <select id="transaction_select" size="8" style="width:95%;" multiple>
         <option id="new" value="new">-> New <-</option>
       </select><p/>
-      <input id="transaction_input" style="width:55%;"></input>
+      <input id="transaction_input" style="width:52%;"></input>
       <button id="transaction_button">Add</button>
       <button id="transaction_delete_button">Delete</button>
     </div>
@@ -66,7 +66,7 @@
       <select name="steps_select" size="8" style="width:95%;" multiple>
         <option value="new">-> New <-</option>
       </select><p/>
-      <input id="steps_input" style="width:55%;"></input>
+      <input id="steps_input" style="width:52%;"></input>
       <button id="steps_button">Add</button>
       <button id="steps_delete_button">Delete</button>
     </div>
@@ -83,7 +83,7 @@
       <select name="actions_thing_two_select" style="width:45%;">
         <option value="new">Stuff</option>
       </select><p/>
-      <input id="actions_input" style="width:55%;"></input>
+      <input id="actions_input" style="width:52%;"></input>
       <button id="actions_button">Add</button>
       <button id="actions_delete_button">Delete</button>
     </div>
@@ -93,7 +93,7 @@
       <select name="journeys_select" size="8" style="width:95%;" multiple>
         <option value="new">-> New <-</option>
       </select><p/>
-      <input id="journeys_input" style="width:55%;"></input>
+      <input id="journeys_input" style="width:52%;"></input>
       <button id="journeys_button">Add</button>
       <button id="jounreys_delete_button">Delete</button>
     </div>
