Pretty good work

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="transaction_area">
       <b>Transactions</b>
       <select id="transaction_select" size="8" style="width:95%;" multiple>
-        <option id="new" value="new">-> New <-</option>
+        <option id="new" value="-1">-> New <-</option>
       </select><p/>
       <input id="transaction_input" style="width:52%;"></input>
       <button id="transaction_button">Add</button>
@@ -64,7 +64,7 @@
     <div id="steps_area">
       <b>Steps for transaction</b>
       <select name="steps_select" size="8" style="width:95%;" multiple>
-        <option value="new">-> New <-</option>
+        <option value="-1">-> New <-</option>
       </select><p/>
       <input id="steps_input" style="width:52%;"></input>
       <button id="steps_button">Add</button>
@@ -74,7 +74,7 @@
     <div id="actions_area">
       <b>Actions for transaction</b>
       <select name="actions_select" size="5" style="width:95%;" multiple>
-        <option value="new">-> New <-</option>
+        <option value="-1">-> New <-</option>
       </select><p/>
       <select name="actions_thing_one_select" style="width:45%;">
         <option value="new">Stuff</option>
@@ -91,7 +91,7 @@
     <div id="journeys_area">
       <b>Journeys for transaction</b>
       <select name="journeys_select" size="8" style="width:95%;" multiple>
-        <option value="new">-> New <-</option>
+        <option value="-1">-> New <-</option>
       </select><p/>
       <input id="journeys_input" style="width:52%;"></input>
       <button id="journeys_button">Add</button>
@@ -101,7 +101,6 @@
     <div id="actions_selected_area">
       <b>Actions to show</b>
       <select name="actions_show_select" size="8" style="width:95%;" multiple>
-        <option value="new">-> New <-</option>
       </select><p/>
     </div>
   </div>
