Update and delete for transactions working

--- a/index.html
+++ b/index.html
@@ -53,27 +53,26 @@
 
     <div id="transaction_area">
       <b>Transactions</b>
-      <select id="transaction_select" size="8" style="width:95%;" multiple>
+      <select id="transaction_select" size="8" style="width:95%;">
         <option id="new" value="-1">-> New <-</option>
       </select><p/>
-      <input id="transaction_input" style="width:52%;"></input>
+      <input id="transaction_input" style="width:45%;"></input>
       <button id="transaction_button">Add</button>
       <button id="transaction_delete_button">Delete</button>
     </div>
   
     <div id="steps_area">
       <b>Steps for transaction</b>
-      <select name="steps_select" size="8" style="width:95%;" multiple>
-        <option value="-1">-> New <-</option>
+      <select name="steps_select" size="8" style="width:95%;">
       </select><p/>
-      <input id="steps_input" style="width:52%;"></input>
+      <input id="steps_input" style="width:45%;"></input>
       <button id="steps_button">Add</button>
       <button id="steps_delete_button">Delete</button>
     </div>
   
     <div id="actions_area">
       <b>Actions for transaction</b>
-      <select name="actions_select" size="5" style="width:95%;" multiple>
+      <select name="actions_select" size="5" style="width:95%;">
         <option value="-1">-> New <-</option>
       </select><p/>
       <select name="actions_thing_one_select" style="width:45%;">
@@ -83,17 +82,17 @@
       <select name="actions_thing_two_select" style="width:45%;">
         <option value="new">Stuff</option>
       </select><p/>
-      <input id="actions_input" style="width:52%;"></input>
+      <input id="actions_input" style="width:45%;"></input>
       <button id="actions_button">Add</button>
       <button id="actions_delete_button">Delete</button>
     </div>
   
     <div id="journeys_area">
       <b>Journeys for transaction</b>
-      <select name="journeys_select" size="8" style="width:95%;" multiple>
+      <select name="journeys_select" size="8" style="width:95%;">
         <option value="-1">-> New <-</option>
       </select><p/>
-      <input id="journeys_input" style="width:52%;"></input>
+      <input id="journeys_input" style="width:45%;"></input>
       <button id="journeys_button">Add</button>
       <button id="jounreys_delete_button">Delete</button>
     </div>
