--- a/index.html
+++ b/index.html
@@ -54,52 +54,51 @@
     <div id="transaction_area">
       <b>Transactions</b>
       <select id="transaction_select" size="8" style="width:95%;">
-        <option id="new" value="-1">-> New <-</option>
       </select><p/>
-      <input id="transaction_input" style="width:45%;"></input>
+      <input id="transaction_input" style="width:42%;"></input>
       <button id="transaction_button">Add</button>
       <button id="transaction_delete_button">Delete</button>
     </div>
   
     <div id="steps_area">
       <b>Steps for transaction</b>
-      <select name="steps_select" size="8" style="width:95%;">
+      <select id="steps_select" size="8" style="width:95%;">
       </select><p/>
-      <input id="steps_input" style="width:45%;"></input>
+      <input id="steps_input" style="width:42%;"></input>
       <button id="steps_button">Add</button>
       <button id="steps_delete_button">Delete</button>
     </div>
   
     <div id="actions_area">
       <b>Actions for transaction</b>
-      <select name="actions_select" size="5" style="width:95%;">
+      <select id="actions_select" size="5" style="width:95%;">
         <option value="-1">-> New <-</option>
       </select><p/>
-      <select name="actions_thing_one_select" style="width:45%;">
+      <select name="actions_thing_one_select" style="width:42%;">
         <option value="new">Stuff</option>
       </select>
       &nbsp;
-      <select name="actions_thing_two_select" style="width:45%;">
+      <select name="actions_thing_two_select" style="width:42%;">
         <option value="new">Stuff</option>
       </select><p/>
-      <input id="actions_input" style="width:45%;"></input>
+      <input id="actions_input" style="width:42%;"></input>
       <button id="actions_button">Add</button>
       <button id="actions_delete_button">Delete</button>
     </div>
   
     <div id="journeys_area">
       <b>Journeys for transaction</b>
-      <select name="journeys_select" size="8" style="width:95%;">
+      <select id="journeys_select" size="8" style="width:95%;">
         <option value="-1">-> New <-</option>
       </select><p/>
-      <input id="journeys_input" style="width:45%;"></input>
+      <input id="journeys_input" style="width:42%;"></input>
       <button id="journeys_button">Add</button>
       <button id="jounreys_delete_button">Delete</button>
     </div>
   
     <div id="actions_selected_area">
       <b>Actions to show</b>
-      <select name="actions_show_select" size="8" style="width:95%;" multiple>
+      <select id="actions_show_select" size="8" style="width:95%;" multiple>
       </select><p/>
     </div>
   </div>
