Quite a lot done tonight

--- a/index.html
+++ b/index.html
@@ -74,12 +74,10 @@
       <select id="actions_select" size="5" style="width:95%;">
         <option value="-1">-> New <-</option>
       </select><p/>
-      <select name="actions_thing_one_select" style="width:42%;">
-        <option value="new">Stuff</option>
+      <select id="actions_thing_one_select" style="width:42%;">
       </select>
       &nbsp;
-      <select name="actions_thing_two_select" style="width:42%;">
-        <option value="new">Stuff</option>
+      <select id="actions_thing_two_select" style="width:42%;">
       </select><p/>
       <input id="actions_input" style="width:42%;"></input>
       <button id="actions_button">Add</button>
@@ -93,7 +91,7 @@
       </select><p/>
       <input id="journeys_input" style="width:42%;"></input>
       <button id="journeys_button">Add</button>
-      <button id="jounreys_delete_button">Delete</button>
+      <button id="journeys_delete_button">Delete</button>
     </div>
   
     <div id="actions_selected_area">
