--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
       <button id="journeys_delete_button">Delete</button>
     </div>
   
-    <div id="actions_selected_area">
+    <div id="actions_to_show_area">
       <b>Actions to show</b>
-      <select id="actions_show_select" size="8" style="width:95%;" multiple>
+      <select id="actions_to_show_select" size="8" style="width:95%;" multiple>
       </select><p/>
     </div>
   </div>
